--- a/简书实战/css/index.css
+++ b/简书实战/css/index.css
@@ -1,43 +1,137 @@
-nav .logo img{
-    height: 54px;
+header {
+    height: 56px;
+    line-height: 56px;
+    border-bottom: 1px solid #eee;
 }
 
-.logo img {
+.logo {
+    float: left;
+}
+.logo > img {
+    height: 50px;
+
+}
+
+.navbar > li {
     float: left;
 }
 
-.fl {
-    float: left;
-}
-.navbar {
-    border: 1px solid;
-}
-
-.navbar >ul li {
-    float: left;
+.navbar >li a{
+    display: inline-block;
+    line-height: 50px;
+    padding: 0 10px;
+    font-size: 17px;
 }
 
-nav .child {
+.navbar .child {
+    background-color: #f00;
     display: none;
 }
 
-.navbar >ul a{
-    padding: 15px 7px;
-}
-
 .search {
-    border: 1px solid;
-    border-radius: 20px;
-    padding-left: 10px;
-    background-color: #eee;
-    margin: 10px 0;
+    float: left;
+    margin-left: 30px;
+    padding-left: 17px;
+    position: relative;
+    line-height: 50px;
+
 }
+
 .search > input {
-    height: 40px;
+    line-height: 36px;
+    padding: 0 20px;
+    border-radius: 18px;
     background-color: #eee;
-
 }
 
-input:focus {
-    outline: none;
+.search .icon-search{
+    position: absolute;
+    right: 10px;
+    top: 3px;
 }
+
+.action {
+    float: right;
+}
+
+.user ul {
+    display: none;
+}
+
+.user .avatar {
+    height: 50px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+.user .icon-down {
+    vertical-align: middle;
+}
+.action .icon-A {
+    float: left;
+    padding:0 20px;
+}
+
+.action .user {
+    float: left;
+    margin-left: 20px;
+}
+
+.action .write {
+    float: left;
+    margin-left: 20px;
+    display: inline-block;
+    padding: 0 28px;
+    background-color: #e56e5d;
+    border-radius: 30px;
+    color: #fff;
+}
+
+.search-panel {
+    position: absolute;
+    top:51px;
+    width: 250px;
+    height: 115px;
+    line-height: 2;
+    border-radius: 6px;
+    box-shadow:0px 5px 12px #eaeaea;
+    padding: 0 15px;
+    display: none;
+}
+
+.search-panel::before {
+    content: "";
+    display:inline-block;
+    border-left: 1px solid #eee;
+    border-top: 1px solid #eee;
+    width:20px;
+    height:20px;
+    position: absolute;
+    top: 1px;
+    left:20px;
+    transform: rotate(45deg);
+}
+
+.search  input:focus~.search-panel{
+    display: block;
+}
+
+.search-panel > a{
+    display:inline-block;
+    padding: 0 5px;
+    border: 1px solid #eee;
+    font-size: 7px;
+    margin-left: 10px;
+}
+
+.search-panel .refresh {
+    float: right;
+}
+
+
+
+
+
+
+
+
