--- a/简书实战/css/index.css
+++ b/简书实战/css/index.css
@@ -2,6 +2,7 @@ header {
     height: 56px;
     line-height: 56px;
     border-bottom: 1px solid #eee;
+    padding:0 15px;
 }
 
 .logo {
@@ -26,6 +27,12 @@ header {
 .navbar .child {
     background-color: #f00;
     display: none;
+    position: absolute;
+    top: 101px;
+}
+
+.navbar .active {
+    color: #f00;
 }
 
 .search {
@@ -42,6 +49,8 @@ header {
     padding: 0 20px;
     border-radius: 18px;
     background-color: #eee;
+    width: 200px;
+    transition: all .3s;
 }
 
 .search .icon-search{
@@ -52,6 +61,10 @@ header {
 
 .action {
     float: right;
+}
+
+.user {
+    padding: 0 5px;
 }
 
 .user ul {
@@ -73,15 +86,21 @@ header {
 }
 
 .action .user {
+    position:relative;
     float: left;
     margin-left: 20px;
+    font-size: 13px;
+
 }
 
 .action .write {
     float: left;
     margin-left: 20px;
+    margin-top: 6px;
+    height: 40px;
+    line-height: 40px;
     display: inline-block;
-    padding: 0 28px;
+    padding: 0 20px;
     background-color: #e56e5d;
     border-radius: 30px;
     color: #fff;
@@ -116,6 +135,10 @@ header {
     display: block;
 }
 
+.search  input:focus {
+    width: 230px;
+}
+
 .search-panel > a{
     display:inline-block;
     padding: 0 5px;
@@ -128,10 +151,109 @@ header {
     float: right;
 }
 
+.user:hover .child {
+    display: block;
+    position: absolute;
+    left: 0px;
+    width: 160px;
+    box-shadow: 0px 5px 12px #eaeaea;
+}
 
+.user:hover {
+    background-color: #ccc;
+    cursor: pointer;
 
+}
 
+.user .child a {
+    display: block;
+    padding: 0 10px;
+}
 
+.user .child a:hover {
+    background-color: #ccc;
+}
+
+main {
+
+}
+
+aside {
+    float: right;
+    width: 280px;
+    height: 300px;
+    background-color: #0f0;
+}
+
+main {
+    height: 640px;
+    margin-right: 320px;
+    background-color: #f00;
+}
+
+.carousel {
+    overflow: hidden;
+    position: relative;
+
+}
+main .carousel-imgs{
+    width: 2034px;
+}
+
+.carousel-imgs img{
+    width: 100%;
+    height: 100%;
+
+}
+
+.carousel-imgs a {
+    height: 270px;
+    width: 678px;
+    float: left;
+}
+
+.carousel .carousel-control {
+    padding: 5px 15px;
+    background-color: rgba(0,0,0,.6);
+    color: #fff;
+    font-size: 30px;
+    position: absolute;
+    top: calc(50% - 27.5px);
+    display: none;
+}
+
+.carousel .left {
+    left: 0;
+}
+
+.carousel .right {
+    right: 0;
+}
+
+.carousel:hover .carousel-control {
+    display: block;
+}
+
+.label-group .label {
+    vertical-align: middle;
+    display: inline-block;
+    background-color: #dcdcdc;
+    font-size: 14px;
+    padding-right: 10px;
+    border-radius: 5px;
+    margin: 15px 20px 15px 0;
+}
+
+.label > img {
+    height: 34px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.label-group .more {
+    vertical-align: middle;
+    color: #787878;
+}
 
 
 
