--- a/resume/css.css
+++ b/resume/css.css
@@ -2,6 +2,10 @@
     margin:0;
 }
 
+body{
+    background-color: #efefef;
+}
+
 .clearfix::after{
     content:"";
     display: block;
@@ -91,7 +95,7 @@ nav li:hover > a{
 
 .picureAndText {
     padding:54px 50px;
-
+    background-color: #fff;
 }
 
 .picture {
