--- a/resume/css.css
+++ b/resume/css.css
@@ -1,5 +1,6 @@
 *{
     margin:0;
+    padding:0;
 }
 
 body{
@@ -175,3 +176,120 @@ nav li:hover > a{
 .userCard .text h1 {
     margin-top:18px;
 }
+
+.download-wrap {
+    text-align:center;
+    margin-top:28px;
+    margin-bottom:28px;
+}
+
+.download {
+    display: inline-block;
+    padding: 23px 55px;
+    border: 1px solid #cdcfd1;
+    color: #000;
+}
+
+.download:hover {
+    transition: all .5s;
+    box-shadow: 3px 3px 23px -5px rgba(0,0,0,0.7);
+}
+.selfinfo {
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.8;
+}
+.skills h2 {
+    text-align: center;
+}
+
+.skills {
+    box-sizing: border-box;
+    max-width:940px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+}
+
+.skills > ol {
+    background-color: #ffffff;
+    padding: 40px 50px 10px;
+    margin-top: 30px;
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.55);
+
+}
+
+.skillItem {
+    width:48%;
+    float: left;
+}
+
+.skillItem .progressBar {
+    position: relative;
+    width: 100%;
+    height: 5px;
+    background-color: #fae1e1;
+    margin: 4px 0 40px;
+}
+
+.skillItem .progress {
+    position: absolute;
+    width: 30%;
+    height: 100%;
+    background-color: #e6686a;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.skillItem:nth-child(1) .progress {
+    animation:3s bar6 forwards;
+}
+.skillItem:nth-child(2) .progress {
+    animation:3s bar5 forwards;
+}
+.skillItem:nth-child(3) .progress {
+    animation:3s bar8 forwards;
+}
+.skillItem:nth-child(4) .progress {
+    animation:3s bar5 forwards;
+}
+.skillItem:nth-child(5) .progress {
+    animation:3s bar5 forwards;
+}
+.skillItem:nth-child(6) .progress {
+    animation:3s bar6 forwards;
+}
+
+.skillItem:nth-child(even) {
+    float: right;
+}
+
+@keyframes bar6 {
+    from{
+        width: 0;
+    }
+    to {
+        width: 60%;
+    }
+}
+@keyframes bar5 {
+    from{
+        width: 0;
+    }
+    to {
+        width: 50%;
+    }
+}
+@keyframes bar8 {
+    from{
+        width: 0;
+    }
+    to {
+        width: 80%;
+    }
+}
+
+
+
+
+
