--- a/resume/css.css
+++ b/resume/css.css
@@ -29,6 +29,14 @@ li {
     position:fixed;
     top:0;
     width: 100%;
+    transition: all 1s;
+}
+
+.topNavBar.sticky {
+    background-color: #fff;
+    padding: 10px 0;
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .topNavBar .inner {
@@ -36,6 +44,7 @@ li {
     padding-right: 20px;
 }
 
+.topNavBar .
 .logo {
     float: left;
     font-style: 24px;
